security-group.tf
data "aws_vpc" "mn-vpc" {
  id = "${var.vpc_id}"
}

resource "aws_security_group" "demo-vpc-security-group" {
  name        = "demo-vpc-security-group"
  description = "Allow HTTP, HTTPS, and SSH"
  vpc_id      = "${data.aws_vpc.mn-vpc.id}" # aws_vpc.mn-vpc.id # aws_vpc.demo-vpc.id

  // HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // EFS
  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
